# slot-update-geyser-plugin

./: Cargo.toml  README.md  config.json
plugin/: Cargo.toml  build.rs
plugin/src/: broadcaster.rs  config.rs  lib.rs  message.rs  plugin.rs
