[workspace]
members = [
    "plugin"
]

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace.dependencies]
agave-geyser-plugin-interface = { path = "../solana_2/geyser-plugin-interface" }
anyhow = "1"
cargo-lock = "10"
clap = { version = "4", features = ["cargo", "derive"] }
git-version = "0.3.5"
log = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-clock = "3"
solana-logger = "3"
solana-time-utils = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tokio-util = "*"
vergen = "9"
